tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_missing_single_case/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Missing case: `Some(_)`
  ┌─ src/main.nr:3:19
  │
3 │             match Opt::Some(3) {
  │                   ------------
  │

Aborting due to 1 previous error
